# press_releases_scrapy

./: .gitignore  README.md  config_reader.py  env_example  pyproject.toml  scrapy.cfg
press_releases/: db.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  utils.py
press_releases/spiders/: kmkr.py  mchs.py  nesk.py
