[tool.poetry]
name = "press-releases-scrapy"
version = "0.1.0"
description = ""
authors = ["Karim Kabirov <karim3487@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
sqlalchemy = "^2.0.31"
fake-useragent = "^1.5.1"
psycopg2-binary = "^2.9.9"
environs = "^11.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
